hphp/test/zend/good/ext/iconv/tests/iconv_substr_basic.php.skipif
<?hh
extension_loaded('iconv') || die('skip');
function_exists('iconv_substr') || die("skip iconv_substr() is not available in this build");
