hphp/test/zend/bad/ext/openssl/tests/bug65538_003.php.skipif
<?php
if (!extension_loaded("openssl")) die("skip openssl not loaded");
if (!extension_loaded("phar")) die("skip phar not loaded");
if (!function_exists("proc_open")) die("skip no proc_open");